tools/kubernetes/nginx-ingress/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "macbook.$hostip.nip.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-v01
            port:
              number: 8000
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: python-v01
            port:
              number: 8000
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: python-v02
            port:
              number: 8000
